# rust-webgl2-wasm-template

./: Cargo.toml  README.md  index.html
src/: error.rs  lib.rs  shader.rs
src/shader/: main_frag.glsl  main_vert.glsl
